fixed path issues

--- a/1-CSS3 Section/Day 5/1-Profile page/index.html
+++ b/1-CSS3 Section/Day 5/1-Profile page/index.html
@@ -66,18 +66,18 @@
           </h6>
           <ul class="users">
             <li>
-              <img src="/account.png" alt="user avatar" />
+              <img src="account.png" alt="user avatar" />
               <span id="user-names"> Todd E</span>
               <div class="options">
-              <img src="/check.png" alt="Approve request" />
-              <img src="/close.png" alt="deny" /></div>
+              <img src="check.png" alt="Approve request" />
+              <img src="close.png" alt="deny" /></div>
             </li>
             <li>
-              <img src="/account.png" alt="user avatar" />
+              <img src="account.png" alt="user avatar" />
               <span id="user-names"> Phil K</span>
               <div class="options">
-              <img src="/check.png" alt="Approve request" />
-              <img src="/close.png" alt="deny" /></div>
+              <img src="check.png" alt="Approve request" />
+              <img src="close.png" alt="deny" /></div>
             </li>
           </ul>
         </div>
@@ -88,19 +88,19 @@
           </h6>
           <ul class="users"  id="users">
             <li>
-              <img  src="/account.png" alt="user avatar" />
+              <img  src="account.png" alt="user avatar" />
               <span class="user-names"> Adrian D</span>
             </li>
             <li>
-              <img width="30px" src="/account.png" alt="user avatar" />
+              <img width="30px" src="account.png" alt="user avatar" />
               <span class="user-names"> Anne J</span>
             </li>
             <li>
-              <img src="/account.png" alt="user avatar" />
+              <img src="account.png" alt="user avatar" />
               <span class="user-names"> Alyane T</span>
             </li>
             <li>
-              <img src="/account.png" alt="user avatar" />
+              <img src="account.png" alt="user avatar" />
               <span class="user-names"> Arry Y</span>
             </li>
             <li></li>
