--- a/1-CSS3 Section/Day 5/3-Internet/index.html
+++ b/1-CSS3 Section/Day 5/3-Internet/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Top section -->
     <header class="website-name-logo">
-      <img src="/img/globe.png" alt="globe symbol" />
+      <img src="img/globe.png" alt="globe symbol" />
       <h1 class="website-title">The inter<span class="blue-text">net</span></h1>
     </header>
     <!-- The article starting point -->
@@ -30,18 +30,18 @@
         <hr />
         <div class="ninja">
           <p class="ninja-text">Reinvent your career in just 14 weeks</p>
-          <img src="/img/ninja.png" alt=" ninja" />
+          <img src="img/ninja.png" alt=" ninja" />
           <button class="learn more blue-button">Learn More > > ></button>
         </div>
       </aside>
       <div class="article-start">
         <nav class="top-nav">
           <span class="home-title blue-text">
-            <img src="./img/home.png" alt="home" />
+            <img src="img/home.png" alt="home" />
             DNS
           </span>
           <div class="contact-info">
-            <img src="/img/phone.png" alt="phone logo" />
+            <img src="img/phone.png" alt="phone logo" />
             <p class="contact-numbers">
               <small class="small-text"> Mon -Fri 9 a.m.-5 p.m. (EST) </small>
               <br />
@@ -75,7 +75,7 @@
             </li>
           </ul>
           <img
-            src="./img/client_server.jpg"
+            src="img/client_server.jpg"
             alt="Client server communication"
           />
 
@@ -102,7 +102,7 @@
           </ol>
           <div class="big-3-box">
             <img
-              src="/img/html.png"
+              src="img/html.png"
               alt=" the big 3 , html css and javascript"
             />
             <hgroup>
