--- a/2-JavaScript section/Day 8/2-Likes/Part 2/index.html
+++ b/2-JavaScript section/Day 8/2-Likes/Part 2/index.html
@@ -15,7 +15,7 @@
 
       <div class="container">
         <div class="user-card">
-          <img src="/user.png" alt="user avatar" />
+          <img src="user.png" alt="user avatar" />
           <a href="#" class="blue-keyword"> add an avatar</a>
           <h5>James Doe</h5>
         </div>
@@ -59,6 +59,6 @@
       </div>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
