--- a/2-JavaScript section/Day 9/0-Making Connections/index.html
+++ b/2-JavaScript section/Day 9/0-Making Connections/index.html
@@ -28,14 +28,14 @@
           <div class="upper-container"></div>
           <div class="information">
             <img
-              src="/img/account.png"
+              src="img/account.png"
               alt="user account pic"
               class="user-pic"
             />
 
             <h3>Jane Doe</h3>
             <p class="location">
-              <img src="/img/map.png" alt="map" />
+              <img src="img/map.png" alt="map" />
               <span>Seattle</span>
             </p>
             <p>
@@ -44,7 +44,7 @@
             </p>
 
             <p class="settings">
-              <img src="/img/settings.png" alt="settings" />
+              <img src="img/settings.png" alt="settings" />
               <a href="#" onclick="changeName()">Edit Profile</a>
             </p>
           </div>
@@ -70,27 +70,27 @@
           </h6>
           <ul class="users">
             <li id="contact1">
-              <img src="/img/account.png" alt="user avatar" />
+              <img src="img/account.png" alt="user avatar" />
               <span id="user-names1"> Todd E</span>
               <div class="options">
                 <img
-                  src="/img/check.png"
+                  src="img/check.png"
                   alt="Approve request"
                   onclick="accept()"
                 />
-                <img src="/img/close.png" alt="deny" onclick="accept()" />
+                <img src="img/close.png" alt="deny" onclick="accept()" />
               </div>
             </li>
             <li id="contact2">
-              <img src="/img/account.png" alt="user avatar" />
+              <img src="img/account.png" alt="user avatar" />
               <span id="user-names2"> Phil K</span>
               <div class="options">
                 <img
-                  src="/img/check.png"
+                  src="img/check.png"
                   alt="Approve request"
                   onclick="accept1()"
                 />
-                <img src="/img/close.png" alt="deny" onclick="accept1()" />
+                <img src="img/close.png" alt="deny" onclick="accept1()" />
               </div>
             </li>
           </ul>
@@ -102,19 +102,19 @@
           </h6>
           <ul class="users" id="users">
             <li>
-              <img src="/img/account.png" alt="user avatar" />
+              <img src="img/account.png" alt="user avatar" />
               <span class="user-names"> Adrian D</span>
             </li>
             <li>
-              <img width="30px" src="/img/account.png" alt="user avatar" />
+              <img width="30px" src="img/account.png" alt="user avatar" />
               <span class="user-names"> Anne J</span>
             </li>
             <li>
-              <img src="/img/account.png" alt="user avatar" />
+              <img src="img/account.png" alt="user avatar" />
               <span class="user-names"> Alyane T</span>
             </li>
             <li>
-              <img src="/img/account.png" alt="user avatar" />
+              <img src="img/account.png" alt="user avatar" />
               <span class="user-names"> Arry Y</span>
             </li>
             <li></li>
@@ -123,6 +123,6 @@
         </div>
       </div>
     </main>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
