--- a/0-HTML Section/Day 2/Dictionary entry/index.html
+++ b/0-HTML Section/Day 2/Dictionary entry/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>ninja</h1>
     <img
-      src="/pronunciation.png"
+      src="pronunciation.png"
       alt="pronunciation for the word ninja"
     /><br />
     <em>noun</em>
