path issues fix

--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
           <li class="breadcrumb-item">
-            <a href="../0-HTML Section/Day 1/">Hello world</a>
+            <a href="0-HTML Section/Day 1/">Hello world</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="../0-HTML Section/Day 2/Dictionary entry/index.html"
+            <a href="0-HTML Section/Day 2/Dictionary entry/index.html"
               >Dictionary entry</a
             >
           </li>
           <li class="breadcrumb-item">
-            <a href="../0-HTML Section/Day 2/Indentation fix/index.html"
+            <a href="0-HTML Section/Day 2/Indentation fix/index.html"
               >Indentation fix</a
             >
           </li>
           <li class="breadcrumb-item">
             <a
-              href="../0-HTML Section/Day 2/Personal Portfolio Content/index.html"
+              href="0-HTML Section/Day 2/Personal Portfolio Content/index.html"
               >Portfolio content</a
             >
           </li>
           <li class="breadcrumb-item">
-            <a href="../0-HTML Section/Day 2/Regestration form/index.html"
+            <a href="0-HTML Section/Day 2/Regestration form/index.html"
               >Registration form</a
             >
           </li>
