--- a/0-HTML Section/Day 2/Personal Portfolio Content/index.html
+++ b/0-HTML Section/Day 2/Personal Portfolio Content/index.html
@@ -22,12 +22,12 @@
         </span>
         <span title="Linked in account">
           <img src="linkedin.png" alt="linked in logo" />
-          <a href="https://www.linkedin.com/in/saranatour/">My LinkedIn </a
+          <a href="#">My LinkedIn </a
           >&nbsp;
         </span>
         <span>
           <img src="mail.png" alt="email logo" />
-          <a href="mailto:saranatourcontact@gmail.com"> Send Email </a>&nbsp;
+          <a href="#"> Send Email </a>&nbsp;
         </span>
       </div>
     </header>
